1.1.6 to 1.2.0
----------------------------------------------------------------------
- Removed deleted nodes from the list of nodes available for
  choosing SNMP data collection. Thx Bill. Bug 1043
- Added a dependency for a lib required by Java on FC3. Bug 1068
- Added some corrections to the release notes. Thx Scott. Bug 965

1.1.4 to 1.1.5
----------------------------------------------------------------------
- Added support for ifAlias. Thx Mike and Bill. Bug 598.
- Added Patrol Events
- Relabeled hpux.cpu report from Swap to CPU. Thx Jason
- Changed the label to "UnAck" when looking at acknowledged events.
  Bug 927
- Added a quick link to KSC reports from the main page.
- Added a test to avoid a nullPointerException during data collection.
  Thx David. Bug 841
- Corrected an issue with notification/event matching. Bug 740.
- Added a check for improperly formatted v2 traps.
- Deprecated many of the "standard" events that are no longer needed.
- Added a new UEI named MATCH-ANY-UEI. When used in a notification
  rule, it will return "true" for any UEI. Useful for getting
  notifications on all events to a single devices or group of
  devices.
- Added definitions for MGE UPS traps.
- Added definitions for Network Appliance traps.
- Removed the need for an ifIndex for SNMP data collection. Once the
  service is discovered, a rescan may be necessary. Thx Bill.
- Added a fix for notifications with an IP address of 0.0.0.0. 
  Bug 1016. Thx Bill.
- Added a null pointer fix for categories. Bug 1015. Thx Bill.
- Added an event for Snort traps. Thx Deven
- Added Netbotz events.
- Added a bunch more event definitions. Thx Mike and Jonathan
- Added new Compaq event definitions. Thx Mike
- Added a number of new graphs for Net-SNMP collections.
  Thx Robert and Ray.
- Totally reworked and reordered datacollection-config.xml and
  snmp-graph.properties to make them easier to manage.
- Removed mib2-interfaces from SystemDefs to prevent double-polling.