@@ -1,5 +1,6 @@
 1.1.6 to 1.2.0
 ----------------------------------------------------------------------
+- Added new SystemDef for Cisco PIX. Thx Ted. Bug 1047.
 - Removed deleted nodes from the list of nodes available for
   choosing SNMP data collection. Thx Bill. Bug 1043
 - Added a dependency for a lib required by Java on FC3. Bug 1068
